# disparity_visual_servo

./: .gitignore  LICENSE  README.md  pip3_requirements.txt  pip_requirements.txt
crd_fusion_perception/: CMakeLists.txt  README.md  package.xml  setup.py
crd_fusion_perception/checkpt/: disp_est.pth  disp_refine.pth  extractor.pth
crd_fusion_perception/crd_utils/conf_generation/: __init__.py  conf_generation.py
crd_fusion_perception/crd_utils/crd_fusion/: __init__.py  cost_generator.py  crd_fusion_net.py  disp_estimator.py  disp_refiner.py  disp_regressor.py  feature_extractor.py  layers.py  raw_disp_processor.py
crd_fusion_perception/launch/: refine_disp.launch  refine_rs_disp.launch  rs_camera.launch
crd_fusion_perception/msg/: StereoImgs.msg
crd_fusion_perception/script/: image_np_conversion.py  refine_disp.py  relay_imgs.py
d435_gazebo_plugin/: CMakeLists.txt  README.md  package.xml
d435_gazebo_plugin/launch/: d435_ground.launch
d435_gazebo_plugin/rviz/: camera_ground.rviz
d435_gazebo_plugin/urdf/: camera_ground.urdf.xacro  d435.gazebo.xacro  d435.urdf.xacro
depth_visual_servo_common/: CMakeLists.txt  README.md  package.xml  setup.py
depth_visual_servo_common/launch/: collect_dataset.launch  convert_dataset.launch  set_common_param.launch
depth_visual_servo_common/script/: convert_dataset.py  set_common_param.py
disparity_visual_servo_common/: CMakeLists.txt  README.md  package.xml  setup.py
disparity_visual_servo_common/launch/: collect_dataset.launch  convert_dataset.launch  set_common_param.launch
disparity_visual_servo_common/script/: convert_dataset.py  set_common_param.py
disparity_visual_servo_common/src/disparity_visual_servo_common/: image_np_conversion.py
turtlebot3_d435/: CMakeLists.txt  README.md  package.xml
turtlebot3_d435/launch/: save_img.launch  turtlebot3_d435.launch  turtlebot3_d435_raw_disp.launch  turtlebot3_d435_ref_disp.launch
turtlebot3_d435/models/turtlebot3_d435_house/: model.sdf
turtlebot3_d435/models/turtlebot3_d435_simple_room/: model.config  model.sdf
turtlebot3_d435/rviz/: robot_images.rviz
turtlebot3_d435/script/: save_img.py  save_img_one_instance.py
turtlebot3_d435/src/: add_world_frame.cpp  save_imgs.cpp  stereo_matching.cpp
turtlebot3_d435/urdf/: turtlebot3_d435.urdf.xacro
turtlebot3_d435/worlds/: turtlebot3_d435_house.world  turtlebot3_d435_simple_room.world
visual_servo/: CMakeLists.txt  README.md  package.xml
visual_servo/launch/: collect_sequence.launch  move_robot.launch  move_robot_feat.launch  move_robot_feat_record.launch  move_robot_raw_disp.launch  move_robot_raw_disp_record.launch  move_robot_record.launch  move_robot_sequence.launch  move_robot_sequence_record.launch  process_rosbag.launch  process_sequence.launch  record_ref.launch  save_sequence_manual.launch
visual_servo/script/: controller.py  controller_sequence.py  feat_controller.py  process_rosbag.py  raw_disp_controller.py  save_sequence.py  save_sequence_manual.py  save_target.py
visual_servo/sequence/disp/: 0.npy  1.npy  2.npy  3.npy  4.npy  5.npy
visual_servo/sequence/occ/: 0.npy  1.npy  2.npy  3.npy  4.npy  5.npy
