<?xml version="1.0"?>
<package format="2">
  <name>crd_fusion_perception</name>
  <version>1.0.0</version>
  <description>The crd_fusion_perception package</description>

  <maintainer email="x54fan@uwaterloo.ca">xfan</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>message_filters</build_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>sensor_msgs</build_export_depend>
  <build_export_depend>message_filters</build_export_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>message_filters</exec_depend>
</package>
