<?xml version="1.0"?>
<package format="2">
    <name>turtlebot3_d435</name>
    <version>1.0.0</version>
    <description>Turtlebot3 and D435 Gazebo Package</description>
    <maintainer email="x54fan@uwaterloo.ca">Xiule Fan</maintainer>
    <author email="x54fan@uwaterloo.ca">Xiule Fan</author>

    <license>MIT</license>

    <buildtool_depend>catkin</buildtool_depend>

    <build_depend>roscpp</build_depend>
    <build_depend>rospy</build_depend>
    <build_depend>tf</build_depend>
    <build_depend>gazebo_msgs</build_depend>
    <build_depend>geometry_msgs</build_depend>
    <build_depend>sensor_msgs</build_depend>
    <build_depend>cv_bridge</build_depend>
    <build_depend>message_filters</build_depend>
    <build_depend>std_msgs</build_depend>
    <build_depend>gazebo_ros</build_depend>
    <exec_depend>roscpp</exec_depend>
    <exec_depend>rospy</exec_depend>
    <exec_depend>tf</exec_depend>
    <exec_depend>gazebo_msgs</exec_depend>
    <exec_depend>geometry_msgs</exec_depend>
    <exec_depend>sensor_msgs</exec_depend>
    <exec_depend>cv_bridge</exec_depend>
    <exec_depend>message_filters</exec_depend>
    <exec_depend>std_msgs</exec_depend>
    <exec_depend>gazebo_ros</exec_depend>
    <exec_depend>gazebo</exec_depend>

    <export>
        <gazebo_ros plugin_path="${prefix}/lib" gazebo_media_path="${prefix}" gazebo_model_path="${prefix}/models" />
    </export>
</package>